# household-memory-agent

./: .dockerignore  .env.example  .gitignore  COPILOT_INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.bot  LICENSE  README.md  TESTING.md  docker-compose.yml  memory_agent.py  memory_api.py  pyproject.toml  telegram_bot.py
idea/: household-memory-agent.md
