[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "household-memory-agent"
version = "0.1.0"
description = "A household memory agent using SQLite FTS and LLM-powered search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.19.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
memory = "memory_agent:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
py-modules = ["memory_agent"]
